--- a/design-system.css
+++ b/design-system.css
@@ -73,10 +73,11 @@ img.close.show {
 
 
 .color-swatch-container {
-    display: flex;
-    flex-direction: column;
-    padding: 10%;
+    display: grid;
+    padding: 5%;
+    gap: 5%;
 }
+
 
 /*---------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
