--- a/styles.css
+++ b/styles.css
@@ -96,14 +96,14 @@
 /* Headings common styles */
 .u-heading {
   font-family: var(--heading-font-family);
-  font-weight: var(--heading-font-weight); /* Use variable for consistency */
+  font-weight: var(--heading-font-weight); 
   line-height: var(--heading-line-height);
 }
 
 /* Specific heading styles */
 .u-heading-1, .u-heading-2 {
   font-size: 1.5rem;
-  line-height: 1.8rem; /* Assuming you want this specific line-height for h1 and h2 */
+  line-height: 1.8rem; 
 }
 
 .u-hero-headline {
@@ -114,18 +114,18 @@
 /* Utility class for the body text */
 .u-body-text {
   font-family: var(--body-font-family);
-  font-weight: var(--body-font-weight); /* Use variable for consistency */
-  font-size: 1rem; /* Adjust if needed */
-  line-height: 1.5rem; /* Adjust if needed */
+  font-weight: var(--body-font-weight); 
+  font-size: 1rem; 
+  line-height: 1.5rem; 
 }
 
-/*Hero subheading - assuming it uses Montserrat */
+/*Hero subheading  */
 .u-hero-sub {
-  font-family: var(--body-font-family); /* If it needs to explicitly use Montserrat */
+  font-family: var(--body-font-family); 
   font-size: 1.25rem;
 }
 
-/* Utility classes for font weights - No changes needed */
+/* Utility classes for font weights  */
 .u-font-light {
   font-weight: 300;
 }
