--- a/design-system.css
+++ b/design-system.css
@@ -106,7 +106,7 @@ img.close.show {
         text-decoration: none;
     }
 
-    nav.navigation a:hover  {
+    a:hover  {
         background-color: var(--clr-primary-bg);
     }
 
