--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,12 @@
   --letter-spacing: 0.5px;
 }
 
+body {
+  line-height: 1.5rem;
+}
+
+
+
 /* CSS Reset and Border Box Fix */
 *,
 *::before,
@@ -48,7 +54,10 @@ a {
 
 /* Utility classes */
 
-
+/* Margins */
+.l-m {
+  margin: 1rem;
+}
 
 /* Background Colors */
 .u-bg-primary {
@@ -97,14 +106,15 @@ a {
 /* Headings common styles */
 .u-heading {
   font-family: var(--heading-font-family);
-  font-weight: var(--heading-font-weight); 
+  font-weight: var(--heading-font-weight);
   line-height: var(--heading-line-height);
 }
 
 /* Specific heading styles */
-.u-heading-1, .u-heading-2 {
+.u-heading-1,
+.u-heading-2 {
   font-size: 1.5rem;
-  line-height: 1.8rem; 
+  line-height: 1.8rem;
 }
 
 .u-hero-headline {
@@ -115,14 +125,14 @@ a {
 /* Utility class for the body text */
 .u-body-text {
   font-family: var(--body-font-family);
-  font-weight: var(--body-font-weight); 
-  font-size: 1rem; 
-  line-height: 1.5rem; 
+  font-weight: var(--body-font-weight);
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 /*Hero subheading  */
 .u-hero-sub {
-  font-family: var(--body-font-family); 
+  font-family: var(--body-font-family);
   font-size: 1.25rem;
 }
 
