--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,10 @@ a {
   margin-top: 1rem;
 }
 
+.l-mb-1 {
+  margin-bottom: 1rem;
+}
+
 /* Background Colors */
 .u-bg-primary {
   background-color: var(--clr-primary-bg);
