--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,14 @@ a {
   margin-bottom: 1rem;
 }
 
+.l-mr-1 {
+  margin-right: 1rem;
+}
+
+
+
+
+
 /* Background Colors */
 .u-bg-primary {
   background-color: var(--clr-primary-bg);
