--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,10 @@ a {
   margin-right: 1rem;
 }
 
-
+.l-my-1 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 
 /* Background Colors */
 .u-bg-primary {
