--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,10 @@ a {
   padding-right: 1rem;
 }
 
+.l-pl-1 {
+  padding-left: 1rem;
+}
+
 /* Background Colors */
 .u-bg-primary {
   background-color: var(--clr-primary-bg);
