Add utility class for flexbox

--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,12 @@ a {
   padding-bottom: 1rem;
 }
 
+/* Flex */
+.l-flex {
+  display: flex;
+}
+
+
 /* Background Colors */
 .u-bg-primary {
   background-color: var(--clr-primary-bg);
