Add utility class to center flex items

--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,10 @@ a {
   flex-direction: row;
 }
 
+.l-justify-center {
+  justify-content: center;
+}
+
 /* Background Colors */
 .u-bg-primary {
   background-color: var(--clr-primary-bg);
