Add utility class to align flex items center

--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,10 @@ a {
   justify-content: center;
 }
 
+.l-align-center {
+  align-items: center;
+}
+
 /* Background Colors */
 .u-bg-primary {
   background-color: var(--clr-primary-bg);
