Add utility class for 3 column grid

--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,10 @@ a {
   grid-template-columns: repeat(2, 1fr);
 }
 
+.l-grid-cols-3 {
+  grid-template-columns: repeat(3, 1fr);
+}
+
 /* Background Colors */
 .u-bg-primary {
   background-color: var(--clr-primary-bg);
