Update classes in html tags

--- a/design-system.css
+++ b/design-system.css
@@ -85,6 +85,11 @@ img.close.show {
     background-color: var(--clr-accen-light);
 }
 
+/*For spacing page example divs*/
+.spacing-example-div {
+    min-height: 100px;
+}
+
 /*---------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
 @media (min-width: 800px) {
