Style navbar for larger screens

--- a/styles.css
+++ b/styles.css
@@ -354,3 +354,43 @@ nav {
 #check:checked ~ .nav-list li {
   opacity: 1;
 }
+
+/*----------------------------------------------- Desktop view -------------------------------------------------------------------------*/
+
+@media only screen and (min-width: 900px) {
+  .logo-container {
+    margin-left: 25px;
+  }
+
+  nav {
+    height: 100px;
+    background-color: transparent;
+  }
+
+  .hamburger-btn {
+    display: none;
+  }
+
+  .nav-list {
+    position: relative;
+    height: 100px;
+    top:0;
+    background-color: none;
+    float: right;
+    text-align: right;
+    margin-right: 25px;
+    transition: none;
+  }
+
+  .nav-list li {
+    display: inline-block;
+    opacity: 1;
+    line-height: 100px;
+    margin: 0 20px;
+    transition: none;
+  }
+
+  .nav-list li a.active, .nav-list li a:hover{
+    color: #fffffe;
+  }
+}
