Style hero section

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,12 @@ a {
   text-decoration: none;
 }
 
+/* CSS */
+.text-center {
+  text-align: center;
+}
+
+
 /* Utility classes */
 
 /* Margins */
