--- a/styles.css
+++ b/styles.css
@@ -275,6 +275,20 @@ a {
   font-weight: 700;
 }
 
+.hero-bg {
+  background-image: url('/images/backgrounds/hero-welcome.webp');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.c-card {
+  background-color: rgba(195, 240, 202, 0.8);
+  border-radius: 10px; 
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Horizontal offset, vertical offset, blur radius, color */
+}
+
+
 /*----------------------------------------------------------- index styles -------------------------------------------------------------------------------*/
 
 nav {
