--- a/styles.css
+++ b/styles.css
@@ -362,11 +362,49 @@ nav {
   opacity: 1;
 }
 
+/*--------------------------------------------------- Button -------------------------------------------------------------------------*/
+
+
+.button {
+  appearance: none;
+  background-color: var(--clr-accent);
+  border: 2px solid #1A1A1A;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: var(--clr-secondary-text);
+  cursor: pointer;
+  display: inline-block;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  touch-action: manipulation;
+  width: 100%;
+}
+
+.button:disabled {
+  pointer-events: none;
+}
+
+.button:hover {
+  background-color: var(--clr-accen-light);
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+
 /*----------------------------------------------- Desktop view -------------------------------------------------------------------------*/
 
-@media screen and (min-width: 768px) {
+
+
+@media only screen and (min-width: 1080px) {
+
   .hero-p {
-    max-width: 70%;
+    max-width: 60%;
     text-align: left;
   }
 
@@ -381,13 +419,9 @@ nav {
   }
 
   .c-card-hero {
-    max-width: 60%;
+    max-width: 50%;
   }
 
-}
-
-
-@media only screen and (min-width: 900px) {
   .logo-container {
     margin-left: 25px;
   }
@@ -422,3 +456,4 @@ nav {
     color: var(--clr-accent);
   }
 }
+
