--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@
   /*Background*/
   --clr-primary-bg: #faeee7;
   --clr-secondary-bg: #c3f0ca;
-  --clr-white-bg: #fffffe;
+  --clr-white: #fffffe;
+  --clr-black: #191919;
 
   /*Heading / Button Text */
   --clr-secondary-text: #33272a;
@@ -18,8 +19,8 @@
 
   /*Button*/
   --clr-accent: #ff8ba7;
-  --clr-accen-light: #ffc6c7;
-  --clr-accen-dark: #AA336A;
+  --clr-accent-light: #ffc6c7;
+  --clr-accent-dark: #AA336A;
 
 
   /* Typefaces */
@@ -34,8 +35,10 @@
 }
 
 body {
-  line-height: 1.5rem;
-  font-family: var(--body-font-family);
+  font-family: 'Montserrat', sans-serif;
+  color: var(--clr-primary-text);
+  background-color: var(--clr-primary-bg);
+  line-height: var(--body-line-height);
 }
 
 
@@ -276,26 +279,56 @@ a {
 }
 
 .hero-bg {
-  background-image: url('/images/backgrounds/hero-welcome.webp');
+  background-image: url('/images/backgrounds/hero-welcome.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.explore-bg {
+  background-image: linear-gradient(rgba(195, 240, 202, 0.9), rgba(195, 240, 202, 0.9)), url('/images/backgrounds/explore-bg.webp');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.giftcard-bg {
+  background: linear-gradient(rgba(195, 240, 202, 0.9), rgba(195, 240, 202, 0.9)), url('/images/backgrounds/giftcard-bg.webp');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.social-bg {
+  background-image: linear-gradient(rgba(195, 240, 202, 0.9), rgba(195, 240, 202, 0.9)), url('/images/backgrounds/social-bg.webp');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.products-bg {
+  background-image: linear-gradient(rgba(195, 240, 202, 0.9), rgba(195, 240, 202, 0.9)), url('/images/backgrounds/products-bg.webp');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .c-card {
-  background-color: rgba(195, 240, 202, 0.8);
+  margin-top: 1rem;
+  background-color: rgba(195, 240, 202, 0.9);
   border-radius: 10px; 
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Horizontal offset, vertical offset, blur radius, color */
 }
 
 
-/*----------------------------------------------------------- index styles -------------------------------------------------------------------------------*/
+/*----------------------------------------------------------- Navbar styles -------------------------------------------------------------------------------*/
 
 nav {
   height: 75px;
   width: 100%;
   display: flex;
   justify-content: space-between;
+  background-color: var(--clr-accent-dark);
 }
 
 .logo-container {
@@ -316,7 +349,7 @@ nav {
   width: 100%;
   height: 0vh;
   top: 75px;
-
+  background-color: var(--clr-accent-dark);
   float: right;
   text-align: center;
   transition: all .5s;
@@ -330,13 +363,13 @@ nav {
 }
 
 .nav-list li a {
-  color: var(--clr-primary-text);
+  color: var(--clr-white);
   font-size: 20px;
   text-transform: uppercase;
 }
 
 .nav-list li a.active, .nav-list li a:hover{
-  color: var(--clr-accent);
+  color: var(--clr-accent-light);
   transition: 0.5s;
 }
 
@@ -387,7 +420,7 @@ nav {
 }
 
 .button:hover {
-  background-color: var(--clr-accen-light);
+  background-color: var(--clr-accent-light);
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   transform: translateY(-2px);
 }
@@ -396,6 +429,32 @@ nav {
   box-shadow: none;
   transform: translateY(0);
 }
+
+/*------------------------------------------------------ Form Style --------------------------------------------------------------*/
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 1rem; /* space between inputs */
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+/*--------------------------------------------------------- Footer ------------------------------------------------------------*/
+footer {
+  display: flex;
+  flex-direction: column; /* Stack elements vertically for mobile */
+  align-items: center;
+  padding: 2rem 1rem;
+  background-color: var(--clr-accent-dark);
+  color: var(--clr-white);
+}
+
 
 /*----------------------------------------------- Desktop view -------------------------------------------------------------------------*/
 
@@ -413,13 +472,26 @@ nav {
     flex-direction: row;
   }
 
+
+  .section-combo {
+    display: grid;
+    margin: 0rem 15rem;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
+
+.hero-bg {
+  height: 60vh;
+}
+
+
   .container {
     max-width: 1200px;
     margin: 0 auto;
   }
 
   .c-card-hero {
-    max-width: 50%;
+    margin: 0rem 15rem;
   }
 
   .logo-container {
@@ -454,6 +526,12 @@ nav {
 
   .nav-list li a.active, .nav-list li a:hover{
     color: var(--clr-accent);
+  }
+
+  footer {
+    flex-direction: row; /* Align elements horizontally for desktop */
+    justify-content: space-around; /* Evenly space out the elements */
+    align-items: flex-start; /* Align items to the start of the flex container */
   }
 }
 
