--- a/styles.css
+++ b/styles.css
@@ -316,8 +316,9 @@ a {
 .c-card {
   margin-top: 1rem;
   background-color: rgba(195, 240, 202, 0.9);
-  border-radius: 10px; 
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Horizontal offset, vertical offset, blur radius, color */
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  /* Horizontal offset, vertical offset, blur radius, color */
 }
 
 
@@ -368,7 +369,8 @@ nav {
   text-transform: uppercase;
 }
 
-.nav-list li a.active, .nav-list li a:hover{
+.nav-list li a.active,
+.nav-list li a:hover {
   color: var(--clr-accent-light);
   transition: 0.5s;
 }
@@ -387,11 +389,11 @@ nav {
   display: none;
 }
 
-#check:checked ~ .nav-list {
+#check:checked~.nav-list {
   height: 100vh;
 }
 
-#check:checked ~ .nav-list li {
+#check:checked~.nav-list li {
   opacity: 1;
 }
 
@@ -432,23 +434,33 @@ nav {
 
 /*------------------------------------------------------ Form Style --------------------------------------------------------------*/
 
-form {
-  display: flex;
-  flex-direction: column;
+/* Form container styling */
+.form-container {
+ /* Maximum width to ensure it doesn't get too wide on large screens */
+  margin: auto; /* Center the form in the section */
 }
 
-input {
-  font-family: 'Montserrat', sans-serif;
-  margin-bottom: 1rem; /* space between inputs */
-  padding: 0.5rem;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+/* Input field styling */
+.form-container input[type="text"] {
+  width: 100%; /* Make inputs take full width of the form container */
+  padding: 15px; /* Increase padding for larger, easier to read input fields */
+  margin: 10px 0; /* Add some vertical space between inputs */
+  border: 1px solid #ccc; /* Add a border to inputs */
+  border-radius: 5px; /* Slightly round the corners of the inputs */
+}
+
+/* Message input styling */
+.form-container input[type="text"][name="exampleInput"][placeholder="Message"] {
+  height: 100px; /* Make the message input taller */
+  padding-top: 15px; /* Add padding to the top for text alignment */
+  padding-bottom: 15px; /* Add padding to the bottom for text alignment */
 }
 
 /*--------------------------------------------------------- Footer ------------------------------------------------------------*/
 footer {
   display: flex;
-  flex-direction: column; /* Stack elements vertically for mobile */
+  flex-direction: column;
+  /* Stack elements vertically for mobile */
   align-items: center;
   padding: 2rem 1rem;
   background-color: var(--clr-accent-dark);
@@ -478,11 +490,15 @@ footer {
     margin: 0rem 15rem;
     justify-content: center;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-}
+  }
 
-.hero-bg {
-  height: 60vh;
-}
+  .form-container {
+    margin: 0rem 15rem;
+  }
+
+  .hero-bg {
+    height: 60vh;
+  }
 
 
   .container {
@@ -509,7 +525,7 @@ footer {
   .nav-list {
     position: relative;
     height: 100px;
-    top:0;
+    top: 0;
     float: right;
     text-align: right;
     margin-right: 25px;
@@ -524,14 +540,17 @@ footer {
     transition: none;
   }
 
-  .nav-list li a.active, .nav-list li a:hover{
+  .nav-list li a.active,
+  .nav-list li a:hover {
     color: var(--clr-accent);
   }
 
   footer {
-    flex-direction: row; /* Align elements horizontally for desktop */
-    justify-content: space-around; /* Evenly space out the elements */
-    align-items: flex-start; /* Align items to the start of the flex container */
+    flex-direction: row;
+    /* Align elements horizontally for desktop */
+    justify-content: space-around;
+    /* Evenly space out the elements */
+    align-items: flex-start;
+    /* Align items to the start of the flex container */
   }
 }
-
