--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,16 @@ body {
   line-height: var(--body-line-height);
 }
 
+p {
+  font-family: var(--body-font-family);
+  font-weight: var(--body-font-weight);
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+h1,h2,h3,h4 {
+  font-family: var(--heading-font-family);
+}
 
 
 /* CSS Reset and Border Box Fix */
