--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
   /*Background*/
   --clr-primary-bg: #fffffe;
-  --clr-secondary-bg: #fffffe;
+  --clr-secondary-bg: #F5F5DC;
   --clr-white: #191919;
   --clr-black: #191919;
 
