--- a/design-system.css
+++ b/design-system.css
@@ -31,6 +31,7 @@ img.close.show {
     gap: 5%;
     margin-left: 10%;
     padding-top: 10%;
+    min-height: 100vh;
 }
 
 .typography-container-item {
